--- a/lqd.net.domain.results.tests/lqd.net.domain.results.tests.csproj
+++ b/lqd.net.domain.results.tests/lqd.net.domain.results.tests.csproj
@@ -62,6 +62,7 @@
     <Compile Include="AddResultTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RemoveResultTests.cs" />
+    <Compile Include="ResultErrorTests.cs" />
     <Compile Include="SearchResultTests.cs" />
     <Compile Include="UpdateResultTests.cs" />
   </ItemGroup>
